<resources>
    <string name="app_name">Сканер магических отпечатков</string>
    <string name="investigate">Узнать что-то новое</string>
    <string name="show_notepad">Посмотреть записи в блокноте</string>
    <string name="magic_word">Волшебное слово</string>
    <string name="action_settings">Настройки</string>
    <string name="chose_fraction">Выберите вашу фракцию</string>
    <string name="guard_access_text">Знания стража: %1$s</string>
    <string name="chearch_access_text">Знания монаха: %1$s</string>
    <string name="orden_access_text">Знания орденца: %1$s</string>
    <string name="medic_access_text">Знания медика: %1$s</string>
    <string name="city_guardian_access_text">Знания городского стража: %1$s</string>
    <string name="geniy_access_text">Знания одаренного: %1$s</string>
    <string name="scientist_access_text">Знания ученого: %1$s</string>
    <string name="cast">Кастануть</string>

    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>

    <string-array name="fraction">
        <item>Страж</item>
        <item>Монах</item>
        <item>Орденец</item>
    </string-array>
</resources>